--- a/reports.html
+++ b/reports.html
@@ -15,7 +15,7 @@
     <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
     <link href="css/loginpage.css" rel="stylesheet">
     <script src="chart.js" type="text/javascript"></script>
-    <script src="myChart.js"></script>
+    <script src="js/myChart.js"></script>
 </head>
 <body>
     <h2>my chart</h2>
