--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
     <link href="login.css" rel="stylesheet">
 
 </head>
-
+<body>
     <div class="container">
         <div class="row">
         <div class="col-xs-4 col-md-4 left-nav">
