changes made so far

--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
             <div class="thumbnail">
                     <img src="img\Nigerian-Coat-of-Arm.png">
                     <div class="caption">
-                        <h3>NBIRD</h3>
+                        <h3>NIGERIA BIRTH AND DEATH RATES MONITORING SYSTEM</h3>
                         <p> registration made easy</p>
                         
                     </div>
