--- a/reports.html
+++ b/reports.html
@@ -9,15 +9,15 @@
     <link rel="icon" href="../../favicon.ico">
 
     <title>NBIRD MONITORING SYSTEM</title>
-
-    <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
     <link href="css/loginpage.css" rel="stylesheet">
-    <script src="chart.js" type="text/javascript"></script>
-    <script src="js/myChart.js"></script>
+    <script src="js/Chart.js" type="text/javascript"></script>
 </head>
 <body>
-    <h2>my chart</h2>
-    <canvas id="mychart" width="500" height="400">  </canvas>
+    <h3>welcome statistical page</h3>
+<canvas id="myChart" width="400" height="400"></canvas>
+<script src="js/mychart.js"></script>
+<script src="js/utils"></script>
 </body>
+</html>
