--- a/birthreg.html
+++ b/birthreg.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
@@ -27,30 +27,28 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-                <a class="navbar-brand" href="#">Project name</a>
+                <a class="navbar-brand" href="#"><img src="img\Nigerian-Coat-of-Arm.png" alt="" width="80" height="35"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Dashboard</a></li>
-                    <li><a href="#">Settings</a></li>
-                    <li><a href="#">Profile</a></li>
-                    <li><a href="#">Help</a></li>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">BIRTH REGISTRATION</a></li>
+                    <li><a href="#">DEATH REGISTRATION</a></li>
+                    <li><a href="#">VIEW LIVE COUNT</a></li>
                 </ul>
-                <form class="navbar-form navbar-right">
-                    <input type="text" class="form-control" placeholder="Search...">
-                </form>
             </div>
         </div>
     </nav>
-    <br>
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li class="active"><a href="index.html">HOME <span class="sr-only">(current)</span></a></li>
-                <li><a href="birthreg.html">BIRTH REGISTRATION</a></li>
-                <li><a href="deathreg.html">DEATH REGISTRATION</a></li>
-                <li><a href="login.html">REPORTS</a></li>
-            </ul>
+            <li class="active">
+            
+            <a href="#"> <span class="glyphicon glyphicon-home" aria-hidden="true"></span>  HOME<span class="sr-only">(current)</span> </a></li>
+            <li><a href="birthreg.html"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  BIRTH REGISTRATION</a></li>
+            <li><a href="deathreg.html"><span class="glyphicon glyphicon-user" aria-hidden="true">DEATH REGISTRATION</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-record" aria-hidden="true"> REPORTS</a></li>
+          </ul>
             <ul class="nav nav-sidebar">
                 <li><a href="">Nav item</a></li>
                 <li><a href="">Nav item again</a></li>
@@ -60,7 +58,8 @@
             </ul>
 
         </div>
-        <div class="col-sm-6 col-sm-offset-4">
+        <div class="col-sm-5 col-sm-offset-4">
+            <img src="img/welcome1.png" width="300" height="80">
             <form action="#" method="POST">
                 <div class="form-group">
                     <h4 id="heading">CHILD'S DETAILS</h4>
@@ -194,8 +193,16 @@
                     <label for="exampleInputEmail1">Email address</label>
                     <input name="email" type="email" class="form-control" id="exampleInputEmail1" autocomplete="false" placeholder="Email">
                 </div>
-                <button type="button" class="btn btn-primary btn-lg">Submit</button>
+                <button type="button" class="mycustombtn">Submit</button>
             </form>
+        </div>
+        <div class="col-md-3 col-sm-3">
+            <div class="alert alert-info" role="alert">
+  <a href="#" class="alert-link">
+    Birth registration is the first step to Citizenship
+  </a>
+</div>
+            <img src="img\birth_cert.jpg" alt="" width="400" height="250">
         </div>
     </div>
 </body>
