--- a/deathreg.html
+++ b/deathreg.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+   <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
@@ -26,18 +26,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-                <a class="navbar-brand" href="#">Project name</a>
+                <a class="navbar-brand" href="#"><img src="img\Nigerian-Coat-of-Arm.png" alt="" width="80" height="35"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Dashboard</a></li>
-                    <li><a href="#">Settings</a></li>
-                    <li><a href="#">Profile</a></li>
-                    <li><a href="#">Help</a></li>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">BIRTH REGISTRATION</a></li>
+                    <li><a href="#">DEATH REGISTRATION</a></li>
+                    <li><a href="#">VIEW LIVE COUNT</a></li>
                 </ul>
-                <form class="navbar-form navbar-right">
-                    <input type="text" class="form-control" placeholder="Search...">
-                </form>
             </div>
         </div>
     </nav>
@@ -45,18 +42,13 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li class="active"><a href="index.html">HOME <span class="sr-only">(current)</span></a></li>
-                <li><a href="birthreg.html">BIRTH REGISTRATION</a></li>
-                <li><a href="deathreg.html">DEATH REGISTRATION</a></li>
-                <li><a href="login.html">REPORTS</a></li>
-            </ul>
-            <ul class="nav nav-sidebar">
-                <li><a href="">Nav item</a></li>
-                <li><a href="">Nav item again</a></li>
-                <li><a href="">One more nav</a></li>
-                <li><a href="">Another nav item</a></li>
-                <li><a href="">More navigation</a></li>
-            </ul>
+            <li class="active">
+            
+            <a href="#"> <span class="glyphicon glyphicon-home" aria-hidden="true"></span>  HOME<span class="sr-only">(current)</span> </a></li>
+            <li><a href="birthreg.html"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  BIRTH REGISTRATION</a></li>
+            <li><a href="deathreg.html"><span class="glyphicon glyphicon-user" aria-hidden="true">DEATH REGISTRATION</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-record" aria-hidden="true"> REPORTS</a></li>
+          </ul>
 
         </div>
         <div class="col-sm-6 col-sm-offset-4">
@@ -147,5 +139,5 @@
                 <label for="causes">Cause of Death</label>
                 <textarea class="form-control" rows="3"></textarea>
             </form>
-            <button name="Register" class="btn btn-lg btn-primary" type="submit">SUBMIT</button>
+            <button type="button" class="mycustombtn">Submit</button>
 </body>
