--- a/index.html
+++ b/index.html
@@ -32,14 +32,11 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Dashboard</a></li>
+            <li><a href="#"> <span class="glyphicon glyphicon-home" aria-hidden="true"></span>  HOME<span class="sr-only">(current)</span> </a></li>
             <li><a href="#">Settings</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">Help</a></li>
           </ul>
-          <form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="Search...">
-          </form>
         </div>
       </div>
     </nav>
@@ -48,10 +45,12 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="#">HOME <span class="sr-only">(current)</span></a></li>
-            <li><a href="birthreg.html">BIRTH REGISTRATION</a></li>
-            <li><a href="deathreg.html">DEATH REGISTRATION</a></li>
-            <li><a href="#">REPORTS</a></li>
+            <li class="active">
+            
+            <a href="#"> <span class="glyphicon glyphicon-home" aria-hidden="true"></span>  HOME<span class="sr-only">(current)</span> </a></li>
+            <li><a href="birthreg.html"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  BIRTH REGISTRATION</a></li>
+            <li><a href="deathreg.html"><span class="glyphicon glyphicon-user" aria-hidden="true">DEATH REGISTRATION</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-record" aria-hidden="true"> REPORTS</a></li>
           </ul>
           <ul class="nav nav-sidebar">
             <li><a href="">Nav item</a></li>
@@ -67,12 +66,12 @@
 
           <div class="row placeholders">
             <div class="col-xs-6 col-sm-4 placeholder">
-              <img src="img\birth_cert.jpg" width="250" height="400" class="img-responsive" alt="Generic placeholder thumbnail">
+              <a href="birthreg.html" ><img src="img\birth_cert.jpg" width="250" height="400" class="img-responsive" alt="Generic placeholder thumbnail"></a>
               <h4>Label</h4>
               <span class="text-muted">Something else</span>
             </div>
             <div class="col-xs-6 col-sm-4 placeholder">
-              <img src="img\death-records-327x250.png" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+             <a href="deathreg.html"> <img src="img\death-records-327x250.png" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail"></a>
               <h4>Label</h4>
               <span class="text-muted">Something else</span>
             </div>
